Fixed overlay div content overflow by adding a container div

--- a/Root/CSS/Base/Overlay.css
+++ b/Root/CSS/Base/Overlay.css
@@ -15,6 +15,8 @@
 
 .overlay > div {
 	max-height: 100%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #logo_info {
